--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
+body {
+  background-image: url("./vgnwpGb.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .grid {
   display: flex;
   flex-wrap: wrap;
   width: 400px;
   height: 300px;
+ 
+  
+  
 }
+
+
